--- a/site the Game Xadrez/jogo_de_Xadrez/index.html
+++ b/site the Game Xadrez/jogo_de_Xadrez/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Menu</a>
+                    <a href="#">Home</a>
                     <ul>
                         <li><a href="sobre_o_jogo.html">Sobre o jogo</a></li>
                         <li><a href="manual.html">Manual</a></li>
@@ -24,7 +24,7 @@
                 <li><a href="manual.html">Manual</a></li>
                 <li><a href="Jogar.html">Jogar</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><input type="text" placeholder="Buscar"><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li><input type="text" placeholder="buscar"><i class="fa-solid fa-magnifying-glass"></i></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a id="link_button" href="cadastrar.html">Cadastrar</a></li>
             </ul>
@@ -43,16 +43,16 @@
     </header>
     <section>
         <h2>Olá sejam bem vindos ao site the Game Xadrez</h2>
-       <p>joguem e se divirta-se,jogado um grande jogo de xadrez,que te ajudará no seu desenvolvimento mental,pois ele faz com que você desenvolva <b>habilidades</b> e <b>estrategias</b> ao longo da patrida</p>
+       <p>joguem e se divirta-se,jogado um grande jogo de xadrez,que te ajudará no seu desenvolvimento mental,pois ele faz com que você desenvolva <strong>habilidades</strong> e <strong>estrategias</strong> ao longo da patrida</p>
        <br>
        <h2>informasão do site</h2>
-       <P>Nesse site vão se apresentadas as seguites informasão:</P>
+       <P>Nesse site vão se apresentadas as seguites informação:</P>
        <ul>
-           <li><b>-Tipo de tabuleiro</b></li>
-           <li><b>-Sobre o jogo de xadrez</b></li>
-           <li><b>-Cadrastro dos jogadores</b></li>
-           <li><b>-Jogo.online de xadrez</b></li>
-            <li><b>-Manual do jogo</b></li>
+           <li><strong>-Tipo de tabuleiro</strong></li>
+           <li><strong>-Sobre o jogo de xadrez</strong></li>
+           <li><strong>-Cadrastro dos jogadores</strong></li>
+           <li><strong>-Jogo.online de xadrez</strong></li>
+            <li><strong>-Manual do jogo</strong></li>
         </ul>
         <br>
         <img src="recursos/img/xadrez-imagem4.jpg" alt=img4>
