--- a/site the Game Xadrez/jogo_de_Xadrez/sobre_o_jogo.html
+++ b/site the Game Xadrez/jogo_de_Xadrez/sobre_o_jogo.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Menu</a>
+                    <a href="index.html">Home</a>
                     <ul>
                         <li><a href="sobre_o_jogo.html">Sobre o jogo</a></li>
                         <li><a href="manual.html">Manual</a></li>
